--- a/_posts/thesis_chapters/2025-6-5-Design_v9.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v9.md
@@ -388,9 +388,11 @@ Table 5.x: Categorisation of game design patterns used in P4.
 
 These elements were themed to align with the MDA (mechanics, dynamics, aesthetics) framework discussed in Chapter 2 [^mda].
 
-### Brief observations on impact
+### Summary and  observations on impact
 
-The highlighted affordances of the template and supporting code examples proved impactful from their introduction in P2 onwards. Despite their relative simplicity, these tools enabled the creation of diverse and complex games, even at early stages.
+Thus the structure of supporting resources, created in response to participant requests for adding new GDPs to their games, evolved into a menu of GDPs in the format of name, description and both detailed step by step implementation instruction including code snippets, and stand alone code projects / snippets.
+
+The highlighted affordances of the template and supporting code examples proved impactful from their introduction in P2 onwards. These tools enabled the creation of diverse and complex games, even at early stages.
 
 While some challenges remained (see Vignette 6.1), video data in the next chapter shows increased participant ability to implement game features. The shift from facilitator dependency to tool-mediated progression marks an early instance of learners shaping their own pathways, a theme further explored in Chapter 7.
 
@@ -462,63 +464,37 @@ MORE SIGNPOSTING? Chapter 7 focuses on analysing participant reactions to the de
 
 ## Chapter Discussion
 
-<!-- CREATE A NEW SUMMARY OF DISCUSSION HERE.
-
-- Table of tensions etc , See vignette doc
-- alignment with UMC, and other pedagogies (retrospectively found),
-  - authenticity and blackboxing in particular as a constructionist approach
-- DBR -> germ cell
-- use of collection of GPD a as a alignement with Hook and Repenning
-- STEPPED STAGES DESIGN -->
-
+<!-- MERGED FROM 2024 -11 -6 VERSION -  -->
 
 This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored initially focused on technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving the varied competencies needed to complete the text coding of a multi-media project.
 
-The section begins with a table which begins a process of synthesis of design factors. The subsequent discussion explores features of the design narrative and the summative table section synthesises aspects of systemic contradictions and highlights how elements of the design process contribute to the research landscape,  specifically:
+The section begins with a table which begins a process of synthesis of design factors. The subsequent discussion explores features of the design narrative and the summative table section synthesises aspects of systemic contradictions and highlights how elements of the design process contribute to the research landscape,  specifically UMC, half-baked approach and constructionist design principles.
 
-- alignment with UMC, and other pedagogies (retrospectively found),
+<!-- - alignment with UMC, and other pedagogies (retrospectively found),
   - authenticity and blackboxing in particular as a constructionist approach
-- DBR -> germ cell
-- use of collection of GPD a as a alignment with research of Hook and Repenning
-
+- DBR -> germ cell & use of collection of GPD  -->
 
 INSERT TABLE OF THE DESIGN FACTORS.
 
+<!-- To do this it employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, a focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept. -->
 
-#### Exploring systemic tensions in relation to existing research
+<!-- DROP?
+The emergent and mutual nature of this design process aligns with both DBR and CHAT principles. In this chapter and the previous one, I have described my active role in motivating and supporting an emerging community through iterative phases. The design approach was open and risky, requiring me to rapidly generate new tools in response to changing needs. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the incomplete design.  -->
 
-**UMC & half baked**
+<!-- DROP?
+The concept of affordances, commonly used in DBR, is present in this design through the careful selection of technical tools and non-technical pedagogical strategies. The term affordances has also been extensively explored in the literature of human-computer interaction (HCI) from a CHAT perspective, defined as “possibilities for human actions mediated by cultural means” [@kaptelinin_affordances_2012, p.927]. -->
 
-DOES THIS LIVE HERE OR ABOVE?
+<!-- In 3GAT terminology, the affordances of my design can be framed as a series of secondary stimuli. Sannino [@sannino_principle_2015] highlights the intersection of the use of secondary stimuli by participants and their volitional action or agency. While subsequent chapters explore shifts in the overall structure of participant activity in alignment with concepts of relational and transformative agency, the evolution of these tools, based on the novice status of the participants, also led to an increase in instrumental agency. This instrumental proficiency was required before the rich set of interactions based on peer learning and other social coding processes could emerge in playtesting practices. Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section. -->
 
 Key observations outlined in the table above align with the supported benefits outlined in research on the Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] and the specific technique of starting with a half baked game template [@grizioti_game_2018-1].
 
-The work of Kynigos et al. [@kynigos_children_2018] on the concept of half-baked microworlds and games helped me focus on the motivational aspect of incomplete game affordances to drive initial engagement with the _use_ and _modify_ stages of the UMC approach. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982]. The careful design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way.
+The alignment of the underlying principles of the learning design with research constructionist design heuristics, in particular half-baked designs process merits deeper exploration. A CONTRIBUTION?
 
-REVISE THIS PART
-Kynigos [-@kynigos_black-and-white_2004-1] explores the tension between more targeted/restrictive and more adaptable technology toolsets using a white-box, black-box distinction (explored in the literature review), noting the difficulty of communicating the value of non-commodified, adaptable toolsets despite their exploratory potential. The design of this research's learning template can be seen as a half-baked Microworld [@kynigos_half-baked_2007], with the varied affordances of the design interpreted as invitations to contribute to an improvable boundary object [@kynigos_half-baked_2007, p.336]. This focus thus motivates and facilitates a discussion on a shared experience in a way that aligns with the sociocultural focus of this study.
+The work of Kynigos et al. [@kynigos_children_2018] on the concept of half-baked microworlds and games helped me focus on the motivational aspect of incomplete game affordances to drive initial engagement with the use and modify stages of the UMC approach. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982]. The careful design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way. In addition, the framework of UMC highlights the benefits of a stage-based design. In this design, this staged approach is enacted through the interaction of participants with code via increasingly sophisticated documentation. My observations, supported in the following chapter, indicate that the combination of the use of a template and a collection of GDPs accelerates the use of certain coding fluency practices, which, in turn, had a subsequent impact on the increased use of social coding processes.
 
-THIS IS EXPLORED LATER.
-In addition, the framework of UMC highlights the benefits of a stepped, stage-based design. In this design, this staged approach is enacted through the interaction of participants with code via increasingly sophisticated documentation.
+Turning to constructionist research, a more extensive set of design heuristics is evident in studies of decisions made in creating microworld environments and in the development of Scratch (see Chapter 2 for a summary). Techniques or concepts present in constructionist design research, embodied in this intervention's toolset, include a simplified code authoring environment with live feedback in a preview window, techniques to avoid and correct syntax errors via the linting capabilities of the code playground (see glossary), and the use of a GDP menu to encourage creative but scaffolded design. A detailed description of these elements is explored in Appendix.tech. Of particular relevance to this design process is the principle choose black boxes carefully [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild. Black box decisions steer learners toward exploring preferred concepts. Papert's [-@papert_mindstorms_1980] work on Turtle control in LOGO exemplifies this approach, using abstraction to focus on powerful mathematical ideas. The use of black boxes is also widespread in professional coding practices, particularly through code libraries and frameworks. These tools provide pre-written, self-contained sections of code to simplify complex operations. In my design, the Phaser game-making code library framework serves this purpose by managing underlying structures for gravity and physics calculations necessary for object collisions. In addition, my starting game template further simplified these processes by allowing participants to modify gravity settings through a single variable, thus combining professional coding language use with an accessible learning experience. Based on Laurillard's [-@laurillard2020significance] interpretation of the constructionist design of microworlds as being driven by affordances that structure user experimentation to enable exploration and concept formation without reliance on direct instruction, I propose this design as a form of microworld. When compared to other game coding programs using text languages this learning design can be seen as tightly structured. However, when compared to a constructionist microworld, the structure of my learning design is compromised by its relatively porous borders between this controlled environment and other, more authentic coding ecosystems. I argue that increased scaffolding of learner resources and tools can enhance instrumental agency for novice coders but potentially at the cost of limiting access to the tools and processes of authentic creative communities. The relationship between authentic and scaffolded processes can be understood as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate.
 
-KEEP AS SIGNPOSTING?
-My observations, supported in the following chapter, indicate that the combination of the use of a template and a collection of GDPs accelerates the use of certain coding fluency practices, which, in turn, had a subsequent impact on the increased use of social coding processes.
-
-**Microworlds & constructionist design principles**
-
-Turning to constructionist research, a more extensive set of design heuristics is evident in studies of decisions made in creating microworld environments and in the development of Scratch (see Chapter 2 for a summary).
-
-The design aligns with key element of constructionist design principles articulated by Resnick and Rosenbaum [-@resnick_designing_2013] in terms of allowing immediate feedback and fluid experimentation.
-
-Techniques or concepts present in constructionist design research, embodied in this intervention's toolset, include a simplified code authoring environment with live feedback in a preview window, techniques to avoid and correct syntax errors via the linting capabilities of the code playground (see glossary), and the use of a GDP menu to encourage creative but scaffolded design. A detailed description of these elements is explored in Appendix.tech.
-
-Of particular relevance to this design process is the principle _choose black boxes carefully_ [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild. Black box decisions steer learners toward exploring preferred concepts. Papert's [-@papert_mindstorms_1980] work on Turtle control in LOGO exemplifies this approach, using abstraction to focus on powerful mathematical ideas. The use of black boxes is also widespread in professional coding practices, particularly through code libraries and frameworks. These tools provide pre-written, self-contained sections of code to simplify complex operations. In my design, the Phaser game-making code library framework serves this purpose by managing underlying structures for gravity and physics calculations necessary for object collisions. In addition, my starting game template further simplified these processes by allowing participants to modify gravity settings through a single variable, thus combining professional coding language use with an accessible learning experience. Based on Laurillard's [-@laurillard2020significance] interpretation of the constructionist design of microworlds as being driven by affordances that structure user experimentation to enable exploration and concept formation without reliance on direct instruction, I propose this design as a form of microworld. When compared to other game coding programs using text languages this learning design can be seen as tightly structured.
-
-However, when compared to a constructionist microworld, the structure of my learning design is compromised by its relatively porous borders between this controlled environment and other, more authentic coding ecosystems.
-
-**tension: the intrigue of lifting the lid compared to additional complexity involved**
-
-Addressing authenticity in more detail, it is valuable to re-examine the factors driving my choice of JavaScript and Phaser, a professional, open-source game-making framework. Specifically, this choice relates to the potentially empowering impact of exposing participants to authentic technologies and concepts in hands-on, exploratory processes. Ratto [-@ratto_critical_2011] discusses this through critical making, a process that playfully brings forward Latour's [-@weibel_making_2005; -@latour_cautious_2008] ideas of shifting from matters of fact to matters of concern by revealing taken-for-granted artefacts as deliberately designed objects. This was evident in conversations between participants where they expressed a sense of inspiration or engagement with previously unknown technologies. For instance, exchanges demonstrated a growing appreciation for the complexity behind professional games, based on their perception of the effort required for their own simple game projects:  
+Addressing authenticity in more detail, it is valuable to re-examine the factors driving my choice of JavaScript and Phaser, a professional, open-source game-making framework. Specifically, this choice relates to the potentially empowering impact of exposing participants to authentic technologies and concepts in hands-on, exploratory processes. Ratto [-@ratto_critical_2011] discusses this through critical making, a process that playfully brings forward Latour's [-@weibel_making_2005; -@latour_cautious_2008] ideas of shifting from matters of fact to matters of concern by revealing taken-for-granted artefacts as deliberately designed objects. This was evident in conversations between participants where they expressed a sense of inspiration or engagement with previously unknown technologies. For instance, exchanges demonstrated a growing appreciation for the complexity behind professional games, based on their perception of the effort required for their own simple game projects:
 
     Pearl: It just shows you what goes into these games.
     Student Helper 3: Think about how much effort goes into.
@@ -528,66 +504,38 @@ ADDITION MADIHA's reflection in interview data.
 
 A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a protective, scaffolded learning environment.
 
-In summary, I argue that increased scaffolding of learner resources and tools can enhance instrumental agency REEXAMINE THIS for novice coders but potentially at the cost of limiting access to the tools and processes of authentic creative communities. The relationship between authentic and scaffolded processes can be understood as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate.
-<!--
-#### DBR, CHAT & GDPs as the germ cell concept (unit of analysis)
+In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stage-based approach which introduces code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation.
 
-The emergent and mutual nature of this design process aligns with both DBR and CHAT principles. In this chapter and the previous one, I have described my active role in motivating and supporting an emerging community through iterative phases. The design approach was open and risky, requiring me to rapidly generate new tools in response to changing needs. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the incomplete design. I return to the generative potenial of home education stageholders in the conclusion of this thesis. In line with understandings of DBR research outputs, the identification of guiding principles to address tension in the table above, would be expressed as a set of "tentative generalisations" in the form of design heuristics drawn from the analysis of the concrete practices observed [@hoadley_design-based_2022, p.215].
-
-For this learning design, the concept and pedagogy of working with game design patterns (GDPs) emerged not only as an object of activity on a more granular scope than is typical but also as a germ cell concept valuable to both participants and facilitators. The process of rising to the concrete is a powerful analytical and developmental tool [-@engestrom_embodied_2012]. In seeking a germ cell or unit of analysis, the researcher explores complex, messy concrete processes over time to discern overarching concerns. 3GAT makes a distinction between empirical abstraction, described as a form of categorisation based on observation of activity (e.g. the collating of game features outlined in P1 above) and more theoretical abstractions which can to generate "concrete manifestations and developmental forms" of the core concept, hence the use of the term _germ cell_ [@sannino_activity_2011, p.590].
-
-CLARIFY THIS BETTER - WHAT EXACTLY IS THE GERM CELL / UNIT OF ANALYSIS  
-The theoretical abstraction that emerged from the process of facilitation the implementation and observing the varied use of these gameplay features as socio-cultural concepts was a guiding conception is the pedagogical utility of conceiving of such game features as gameplay design patterns.
-
-Particularly relevant, is a structural feature (from research on design patterns), of the utility of a strongly coupled link between observable game features, a description of the design structure and resources to facilitate implementation in the target code environment.
-
-Thus having identifitied this germ cell.  I continue the analysis of the orienting practice of GDPs as a germ cell concept in the following chapter.
-
-MOVE THIS TO CHAPTER 6?
-The position of GDPs in Activity Systems is complex. As framed as the start of the chapter the use of GDPs form is a part of an emerging object of activity. At the narrower level of activity, the implementation of the GDP into the code acts a a prinicple an objective and motivation. In addition, video observations showed GDP concepts being used as mediational strategies in varied ways. -->
-
-#### Outlining the key stages of GDP use in the structural learning design.
-
-The identification of structural use of GDPs as a germ cell concept, facilitated the development of different progressively graded objectives (recognition, use and modification), as a concrete instance of UMC principles, which helps address the tension between freedom of choice of learner pathway, and expression of interest within a manageable technical structure (with relevant supporting documentation).
-
-Similar to SGD a progressively stepped approach is taken here.
-These varied forms of documentation, and their varied adoption and propagation represent different approaches to  scaffolding the process of becoming familiar with and then modifying to the code in often increasingly ambitious ways.
-
-While SGD was limited in participant pathway choice, my design is not. Following the rationale of choice limitation as a strategy to reduce facilitator stress [@lytle_use_2019], this design  using a limited menu of GDPs as a structural and navigational framework.
-
----  
-
-The shift from P1 to P2 represents a move from a design-build-test to a stepped, stage-based approach. This graduated approach introduce code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task.
-
-GDPs were encountered through the game playing and analysis activity explored in the section above. GDPs were incorporated as affordances into a starter game template, initially highlighted via facilitator interaction and later as the guiding principle of _quick start cards_ to scaffold modifications to the code template.
-
-The structure of supporting resources, created in response to participant requests for adding new GDPs to their games, evolved into a menu of GDPs in the format of name, description and both detailed step by step implementation instruction including code snippets, and stand alone code projects / snippets.
-
-NOTE / MOVE - It could be seen as a progression to move from more scaffolded use of instructions to the use of code snippets alone with practice although data of Toby may not support that progression suggesting instead it may be a matter of preference.
-
-Finally, in line with UMC, the final stage of the stepped approach would be the choice to imagine, design and implement a GDP not included in the menu provided, a process that Dan and Toby take on in P3 (see Vignette 7).
 
 THIS STEPPED PROGRESSION COULD BE EXPRESSED AS A TABLE.  
 
-This stepped approach which increases complexity of the objective of activity, while not identified in any key review [@kafai_constructionist_2015, Denner , etc],  is found in some CGD&P research. The work of Repenning on SGD operationalises this concepts through guiding learners to undertake projects which are progressively more complex.
+This stepped approach which increases complexity of the objective of activity, is present only in limited  CGD&P research. The work of Repenning on SGD operationalises this concepts through guiding learners to undertake projects which are progressively more complex.
 This work differs in a core template is provided allowing for less instruction following and the progression does not involve starting from stratch each time.
 This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners one had built familiarity with it (add this in as appendix using interview data).
 
-ADD LINK.  
+In line with UMC, an advanced stage of the stage based approach would be the choice to imagine, design and implement a GDP not included in the menu provided, a process that Dan and Toby take on in P3 (see Vignette 7).
 
-### Summary and link to next chapter/s
+<!-- MOVE OR SUMMARISE
+GDPs were first identified through playing games in an activity adapted from Moveable Game Jams (ensure this is described or linked to) and were used as a list of features serving as a mediating planning tool.  -->
 
-  - What contradictions arose in this research’s evolving design process and how were they addressed in the resulting CGD&P pedagogy?
+<!-- In P2, GDPs were incorporated as affordances into a starter game template, initially highlighted via facilitator interaction and later as the guiding principle of quick start cards to scaffold modifications to the code template.
+The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation. -->
 
-This chapter has explored the iterative development of the learning design, focusing on resolving barriers to coding and aligning with existing research principles, particularly the use-modify-create (UMC) process and constructionism. It emphasized the potential and challenges of leveraging professional tools within scaffolded environments, underscoring the pivotal role of learner-led design decisions in motivating coding practices and fostering social collaboration.
-It also described the emergence of GDP use as a reoccurring feature guiding goal formation and  structuring of supporting resources and advanced this as a germ cell of the emerging pegagogy.
+<!-- The shift from P1 to P2 represents a move from a design-build-test to a stepped, stage-based approach. This graduated approach introduce code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. -->
 
-I have designed, introduced and revised a technology based set of tools in a process aligned with broad definitions of DBR. Using the techniques  DBR in the focus of documenting the learning desing via a design narrative and of AT in analysis of tensions and congruencies between systemic elements and attempts to resolve those tensions.
+<!-- GDPs were encountered through the game playing and analysis activity explored in the section above. GDPs were incorporated as affordances into a starter game template, initially highlighted via facilitator interaction and later as the guiding principle of _quick start cards_ to scaffold modifications to the code template. -->
 
-DEVELOP THIS A BIT IN TERMS OF LIMITS OF 3GAT? FORESHADOW LATER WORK ON MOVEMENT.
-DBR and affordances explored as networked affordances align with tools not only as technical or perceptual affordances but also mediation using concepts and more social practices or repertoires in CHAT [@barab_curriculum-based_2006].
+<!-- The structure of supporting resources, created in response to participant requests for adding new GDPs to their games, evolved into a menu of GDPs in the format of name, description and both detailed step by step implementation instruction including code snippets, and stand alone code projects / snippets. -->
 
-As expressed in the discussion, the role of GDPs within activity is complex. The next chapter employs video data to describe and analyse the diverse applications of GDPs.
+<!-- NOTE / MOVE - It could be seen as a progression to move from more scaffolded use of instructions to the use of code snippets alone with practice although data of Toby may not support that progression suggesting instead it may be a matter of preference. -->
+
+
+
+
+
+<!-- LINK  -->
+This chapter has explored the iterative development of the learning design, focusing on resolving barriers to coding and aligning with existing research principles, particularly the use-modify-create (UMC) process and constructionism. It emphasized the potential and challenges of leveraging professional tools within scaffolded environments, underscoring the pivotal role of learner-led design decisions in motivating coding practices and fostering social collaboration. Two key lines of inquiry which illuminate the cultural and social dimensions of game-making are explored in subsequent chapters. Chapter 7 examines the impact of emerging community processes on participants’ agency, while the Chapter 6 employs video data to describe and analyse the diverse applications of GDPs.
+
 
 Gilbert is the worsted name.
 
