--- a/_posts/thesis_chapters/tocs/2025-6-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-6-5-Design.md_toc.md
@@ -51,17 +51,4 @@
                 design.](#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.)
         -   [Summary and link to next
             chapter/s](#summary-and-link-to-next-chapters)
-    -   [Parking Lot](#parking-lot)
-        -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
-            -   [MOVED LINK - Applying activity theory to surface
-                contradictions and design tensions experienced by
-                participants and
-                facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
-            -   [Notes from vignette](#notes-from-vignette)
-            -   [Notes before C1](#notes-before-c1)
-            -   [Dropped from Discussion](#dropped-from-discussion)
-        -   [Moved from Graphical Assets
-            above](#moved-from-graphical-assets-above)
-        -   [Removed from Docs - add to appendix
-            .tech](#removed-from-docs---add-to-appendix-.tech)
-        -   [Remove 20th April 25](#remove-20th-april-25)
+    -   [Footnotes](#footnotes)
