working on second conflict

--- a/_posts/thesis_chapters/2025-6-5-Design_v10.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v10.md
@@ -246,11 +246,21 @@ This chapter's vignette (Appendix 5.toby), where Toby designs many levels as a w
 
 This section outlines a contradiction associated with the introduction of supporting documentation to scaffold the game-making process.
 
-After one session in P1, I emailed participants (see Appendix.narrative2), expressing that I felt daunted by the task of facilitating the integration of the disparate creative elements being produced into a cohesive project. I asked parents for ideas and support in organising and bringing more order to group and planning processes.  In response to my email, parents made suggestions including: use of a visible and shared list of game features that are being worked on, documentation to support the implementation their requirements. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed. Groups expanded their activity by creating wish lists of game features, which acted as mediating tools to coordinate between different team members and to request facilitator support to implement them via code structures. In addition to helping directly via coding with participants, I began to create short stand-alone instruction documents if I thought the requested code  would be useful to other groups.
 
-The previous section outlined the introduction of a half-baked template and the UMC (Use–Modify–Create) approach had the unintended consequence of reducing the average size of working groups. One result of this shift was a rise in individual projects, which in turn increased demand on my time as a technical troubleshooter. While the in-tool scaffolding provided by the code template accelerated production for most learners [@laurillard2020significance], participants still required support when adding new code structures, particularly during the _Create_ stage of UMC. In P1, resources to support implementation were minimal and often tied to a specific code challenge, making them unsuitable for reuse. My direct input was often needed at this stage, leading to delays and participant frustration due to the limited time I could offer each group.
 
-In the development period following P1, I reflected on the tension between learner agency, especially the role of creative autonomy, and the need for shared reference points that could support progress without constant facilitator intervention. In response, I developed several new artefacts intended to scaffold project navigation and reduce the bottleneck of real-time technical support.
+In P1 my overall aim was to explore the process and to encourage personal creativity using a diversity of tools. The previous section, outlined the process of arriving at a reduced toolset to help address potential overload and fracturing of experience, thus reducing the possibility for peer exchange of skills and knowledge.
+
+Similarly, in terms of the creative process, the exploratory nature of P1 led to divergent creative pathways, but at a cost of a sense of an overall coherence and shared understanding of the process. In short, it felt like time to reign in the chaos.
+
+After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate [^em]. I asked parents for ideas and support in organising and bringing more order to group and planning processes.  In response to my email, parents made suggestions including: use of a visible and shared list of game features that are being worked on, documentation to support the implementation their requirements. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed. Groups expanded their activity by creating wish lists of game features, which acted as mediating tools to coordinate between different team members and to request facilitator support to implement them via code structures. In addition to helping directly via coding with participants, I began to create short stand-alone instruction documents if I thought the requested code  would be useful to other groups.
+
+In the development period following P1, I reflected on the tension between learner agency, especially the role of creative autonomy, and the need for shared reference points that could support progress without constant facilitator intervention. In P1, resources to support implementation were minimal and often tied to a specific code challenge, making them unsuitable for reuse. My direct input was often needed at this stage, leading to delays and participant frustration due to the limited time I could offer each group.
+
+In response, I developed several new artefacts intended to scaffold project navigation and reduce the bottleneck of real-time technical support.
+
+The previous section outlined the introduction of a half-baked template and the UMC (Use–Modify–Create) approach had the unintended consequence of reducing the average size of working groups. One result of this shift was a rise in individual projects, which in turn increased demand on my time as a technical troubleshooter. While the in-tool scaffolding provided by the code template accelerated production for most learners [@laurillard2020significance], participants still required support when adding new code structures, particularly during the _Create_ stage of UMC.
+
+
 
 #### Surfaced tensions and framed contradiction
 
@@ -469,6 +479,8 @@ Gilbert is the worsted name.
 [^mda]: The evolution and of this theming is outlined in more detail in Appendix.tech.gameframework.
 [^pt]: Playtesting is described in Chapter 2 as
 [^sa]: From V.1.3 in Vignette 1 in Appendix.V I make the following opening announcement "We’ve got this one final making session next and then, if you can make it, the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games. It’s usually quite fun. So, if we can do that - same time next week let me know. So, we’ll keep trying to help you and yes good luck everyone!"
+
+[^em]: This email included in Appendix.email is pivotal to my understanding of the limits of my role as facilitator of an open process and the need to impose limitation. At the end of the email I say "I guess the challenge is to do this so that it’s a map, with different learning directions and possibilities, but that we are all still on the same map in our groups."
 
 [^1]: https://mickfuzz.github.io/makecode-platformer-101/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions
